--- a/app/views/wechat/applies/_apply_list.html.erb
+++ b/app/views/wechat/applies/_apply_list.html.erb
@@ -19,5 +19,5 @@
 		</div>
 	<% end %>
 <% else %>
-	<h4 class="text-center text-info">没有报名记录，赶快去报名吧！</h3>
+	<h4 class="text-center text-warning">没有报名记录，赶快去 <%= link_to "报名", new_wechat_apply_path %> 吧！</h3>
 <% end %>
