modify style of success

--- a/app/views/wechat/applies/success.html.erb
+++ b/app/views/wechat/applies/success.html.erb
@@ -4,7 +4,8 @@
 	</div>
 	<div class="col-xs-10 col-xs-offset-1">
 		<br><br><br>
-		<p class="text-justify my-p">报名成功，感谢您的关注，本次训练营开班时间为2015年11月23日。审核通过后会有辅导员与您联系。如需咨询，请加入梦想训练营官方QQ群：377514266</p>
+		<p class="text-left my-p">报名成功，感谢您的关注，本次训练营开班时间为2015年11月23日。审核通过后会有辅导员与您联系。如需咨询，请加入梦想训练营官方QQ群：
+		<span class="text-primary">377514266</span></p>
 	</div>
 	<div class="col-xs-12 turn-back">
 		<%= link_to "查看报名信息", wechat_apply_path(params[:id])  %>
