--- a/app/views/layouts/wechat.html.erb
+++ b/app/views/layouts/wechat.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= title %></title>
+	<title>报名入口</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 	<%= stylesheet_link_tag    'wechat', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'wechat', 'data-turbolinks-track' => true %>
