--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -77,19 +77,20 @@
               <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6 project-title-show">
                 <div class="row main <%= project_bc(project) %>">
                   <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
+                    <%= raw(project_ops(project))%>
                     <%= link_to("javascript:void(0);", title: current_user.try(:voted_up_on?, project, vote_scope: "collect") ? "取消收藏" : "收藏", class: "vote-create-a", voteable_id: project.id, voteable_type: project.class, style_type: "project-list", id: "projectListShowLink#{project.id}", scope: "collect") do %>
-                      <span class="glyphicon <%= (current_user.try(:voted_up_on?,project, vote_scope: "collect")) ? "glyphicon-star" : "glyphicon-star-empty" %>" aria-hidden="true"></span>
+                      <%= image_tag((current_user.try(:voted_up_on?,project, vote_scope: "collect")) ? "iconfont-star.svg" : "iconfont-star-empty.svg", width: "20px") %>
                     <% end %>
                     <div class="dropdown project-set-btn">
                       <a id="dLabel" data-target="#" href="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                        <%= image_tag("iconfont-set.svg", width: "20px") %>
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="dLabel">
                         <li><%= link_to "打开项目", training_platform_project_announces_path(project_id: project.id) %></li>
                         <li><%= link_to "编辑项目", edit_training_platform_project_path(project), remote: true, format: :js %>
                         </li>
                         <li>
-                          <%= link_to("javascript:void(0);", class: "vote-create-a", voteable_id: project.id, voteable_type: project.class, style_type: "project-pigeonhole", scope: "pigeonhole", id: "") do %>
+                          <%= link_to("javascript:void(0);", class: "vote-create-a", voteable_id: project.id, voteable_type: project.class, style_type: "project-pigeonhole", scope: "pigeonhole") do %>
                             <%= (current_user.try(:voted_up_on?, project, vote_scope: "pigeonhole")) ? "取消归档" : "归档项目" %>
                           <% end %>
                         </li>
