--- a/app/views/admin/applies/_data.html.erb
+++ b/app/views/admin/applies/_data.html.erb
@@ -5,6 +5,7 @@
 				<th>序号</th>
 				<th>姓名</th>
 				<th>性别</th>
+				<th>报名课程</th>
 				<th>手机号码</th>
 				<th>QQ</th>
 				<th>邮箱</th>
@@ -12,7 +13,8 @@
 				<th>教育状况</th>
 				<th>所在院校</th>
 				<th>了解渠道</th>
-				<th>报名课程</th>
+				<th>报名时间</th>
+				<th>状态</th>
 				<th>操作</th>
 			</tr>
 		</thead>
@@ -27,6 +29,7 @@
 						<th><%= index + 1 %></th>
 						<td><%= apply.name %></td>
 						<td><%= Apply::SEX[apply.sex.to_sym] %></td>
+						<td><%= apply.train_name %></td>
 						<td><%= apply.phone %></td>
 						<td><%= apply.qq %></td>
 						<td><%= apply.email %></td>
@@ -34,9 +37,17 @@
 						<td><%= Apply::DEGREE[apply.degree.to_sym] %></td>
 						<td><%= apply.school_name %></td>
 						<td><%= apply.way %></td>
-						<td><%= apply.train_name %></td>
+						<td><%= apply.created_at.strftime("%m-%d %H:%M") %></td>
 						<td>
-							<%= link_to admin_apply_path(apply), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-danger', title: '删除' do %>
+							<%= link_to "#", class: 'btn btn-xs btn-danger', title: '是否联系' do %>
+								<span class="glyphicon glyphicon-earphone"></span>
+							<% end %>
+						</td>
+						<td>
+							<%= link_to admin_apply_path(apply), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-default', title: '编辑' do %>
+								<span class="glyphicon glyphicon-edit"></span>
+							<%end%>
+							<%= link_to admin_apply_path(apply), data:{ confirm: 'Are you sure?'},method: :delete, class: 'btn btn-xs btn-warning', title: '删除' do %>
 								<span class="glyphicon glyphicon-trash"></span>
 							<%end%>
 						</td>
