--- a/app/views/wechat/applies/show.html.erb
+++ b/app/views/wechat/applies/show.html.erb
@@ -16,7 +16,7 @@
 		<div class="col-xs-12 mgin-b-10"><div class="frame"><%= @apply.school_name %></div></div>
 		<div class="col-xs-6 mgin-b-10 rpadding"><div class="frame"><%= @apply.way %></div></div>
 		<div class="col-xs-6 mgin-b-10 lpadding"><div class="frame"><%= @apply.train_name %></div></div>
-		<div class="col-xs-12">
+		<div class="col-xs-12 edit">
 			<%= link_to edit_wechat_apply_path(@apply) do %>
 				<button type="button" class="btn btn-lg btn-block my-lg new1">修改</button>
 			<% end %>
