--- a/app/views/user/home.html.erb
+++ b/app/views/user/home.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "my_homehead" %>
-<div class="main">
+<div class="mains">
 	<!-- 个人资料 -->
 	<div class="container">
 		<!-- 完成任务 -->
