--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -6,118 +6,92 @@
 			<div class="line"></div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row col">
 	  <!-- <div class="col-md-4 courses_tent"> -->
     <div class="worktrain_col">
     <% @trains.each do |train| %>
       <%= link_to worktrain_path(train) do |i| %>
-        <div class="courses_tent">
           <div class="bordered">
-            <%= image_tag( train.picture_url .present? ? train.picture_url : "workt1.png", width: "100%", class: "img-responsive")%>
+            <div class="imgholder">
+            <%= image_tag(train.try(:image).try(:avatar).present? ? train.train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
+            </div>
             <div class="col-sm-12 mt-10">
               <h4><%= train.title.try(:truncate, 15) %></h4>
               <p><%=raw train.introduce.try(:truncate, 20) %></p>
             </div>
             <div class="col-sm-12 infos">
-              <span class="glyphicon glyphicon-eye-open"></span> 1549
+              <span class="glyphicon glyphicon-eye-open"></span> <%= train.views_count_s %>
               &nbsp;&nbsp;&nbsp;
               <span class="glyphicon glyphicon-time"></span>&nbsp;<%= train.created_at.strftime("%F %H:%M:%S") %>
             </div>
           </div>
-        </div>
       <% end %>
     <% end %>
     </div>
-    
-    <!-- <div class="col-md-4 courses_tent">
-      <div class="bordered">
-        <%= image_tag("workt2.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
-      </div>
-      <div class="bordered">
-        <%= image_tag("workt3.png", class: "img-responsive")%>
-        <div class="col-sm-12 mt-10">
-          <h4>我是课程名称</h4>
-          <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-        </div>
-        <div class="col-sm-12 infos">
-          <span class="glyphicon glyphicon-eye-open"></span> 1549
-          &nbsp;&nbsp;&nbsp;
-          <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-        </div>
-      </div>
-    </div> 
-		<div class="col-md-4 courses_tent">
-      <div class="bordered">
-        <a href="#">
-          <%= image_tag("workt2.png", class: "img-responsive")%>
-          <div class="col-sm-12 mt-10">
-            <h4>我是课程名称</h4>
-            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-          </div>
-          <div class="col-sm-12 infos">
-            <span class="glyphicon glyphicon-eye-open"></span> 1549
-            &nbsp;&nbsp;&nbsp;
-            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-          </div>
-        </a>
-      </div>
-      <div class="bordered">
-        <a href="#">
-          <%= image_tag("workt3.png", class: "img-responsive")%>
-          <div class="col-sm-12 mt-10">
-            <h4>我是课程名称</h4>
-            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-          </div>
-          <div class="col-sm-12 infos">
-            <span class="glyphicon glyphicon-eye-open"></span> 1549
-            &nbsp;&nbsp;&nbsp;
-            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-          </div>
-        </a>
-      </div>
-    </div>
-		<div class="col-md-4 courses_tent">
-      <div class="bordered">
-        <a href="#">
-          <%= image_tag("workt1.png", class: "img-responsive")%>
-          <div class="col-sm-12 mt-10">
-            <h4>我是课程名称</h4>
-            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-          </div>
-          <div class="col-sm-12 infos">
-            <span class="glyphicon glyphicon-eye-open"></span> 1549
-            &nbsp;&nbsp;&nbsp;
-            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-          </div>
-        </a>
-      </div>
-      <div class="bordered">
-        <a href="#">
-          <%= image_tag("workt3.png", class: "img-responsive")%>
-          <div class="col-sm-12 mt-10">
-            <h4>我是课程名称</h4>
-            <p>我是一句话的描述一句话的描述一句话的描述.....</p>
-          </div>
-          <div class="col-sm-12 infos">
-            <span class="glyphicon glyphicon-eye-open"></span> 1549
-            &nbsp;&nbsp;&nbsp;
-            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-          </div>
-        </a>
-      </div>
-    </div> -->
-
-    <div class="col-md-12">
-    	<button class="btn btn-default btn-lg next-btn">加载下一页...</button>
-    </div>
 	</div>
+  
+  <div id="test" style="display:none;">
+  <div class="worktrain_col">
+    <% @trains.each do |train| %>
+      <%= link_to worktrain_path(train) do |i| %>
+          <div class="bordered">
+            <div class="imgholder">
+            <%= image_tag(train.try(:image).try(:avatar).present? ? train.train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
+            </div>
+            <div class="col-sm-12 mt-10">
+              <h4><%= train.title.try(:truncate, 15) %></h4>
+              <p><%=raw train.introduce.try(:truncate, 20) %></p>
+            </div>
+            <div class="col-sm-12 infos">
+              <span class="glyphicon glyphicon-eye-open"></span> <%= train.views_count_s %>
+              &nbsp;&nbsp;&nbsp;
+              <span class="glyphicon glyphicon-time"></span>&nbsp;<%= train.created_at.strftime("%F %H:%M:%S") %>
+            </div>
+          </div>
+      <% end %>
+    <% end %>
+  </div>
+  </div>
 </div>
+
+<script type="text/javascript">
+$(function(){
+  $("img.lazy").lazyload({    
+    load:function(){
+    }
+  }); 
+  $(window).scroll(function(){
+      // 当滚动到最底部以上50像素时， 加载新内容
+    if ($(document).height() - $(this).scrollTop() - $(this).height()<50){
+      $('.col').append($("#test").html());    
+      $("img.lazy").lazyload();
+    }
+  });
+  
+  //window resize
+  var currentWidth = 1100;
+  $(window).resize(function() {
+    var winWidth = $(window).width();
+    var conWidth;
+    if(winWidth < 660) {
+      conWidth = 440;
+      col = 2
+    } else if(winWidth < 880) {
+      conWidth = 660;
+      col = 3
+    } else if(winWidth < 1100) {
+      conWidth = 880;
+      col = 4;
+    } else {
+      conWidth = 1100;
+      col = 5;
+    }
+    
+    if(conWidth != currentWidth) {
+      currentWidth = conWidth;
+      $('.col').width(conWidth);
+    }
+  });
+});
+</script>
+
