--- a/app/views/admin/trains/_trains.html.erb
+++ b/app/views/admin/trains/_trains.html.erb
@@ -1,9 +1,9 @@
 <% @trains.each do |train| %>
 <tr>
   <td><%= train.title.try(:truncate, 15) %></td>
-  <td><%= image_tag train.picture_url.url(:thumb) %></td>
-  <td><%=raw train.introduce.try(:truncate, 35) %></td>
-  <td><%= train.pv %></td>
+  <td><%= image_tag(train.try(:image).try(:avatar)) %></td>
+  <td><%= raw train.introduce.try(:truncate, 35) %></td>
+  <td><%= train.views_count_s %></td>
   <td>
     <%#= link_to [:admin, specialty], class: 'btn btn-xs btn-info', title: '查看' do %>
      <!--  <span class="glyphicon glyphicon-eye-open"></span> -->
