--- a/app/views/worktrains/index.html.erb
+++ b/app/views/worktrains/index.html.erb
@@ -13,7 +13,7 @@
       <%= link_to worktrain_path(train) do |i| %>
           <div class="bordered">
             <div class="imgholder">
-            <%= image_tag(train.try(:image).try(:avatar).present? ? train.train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
+            <%= image_tag(train.try(:image).try(:avatar).present? ? train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
             </div>
             <div class="col-sm-12 mt-10">
               <h4><%= train.title.try(:truncate, 15) %></h4>
@@ -36,7 +36,7 @@
       <%= link_to worktrain_path(train) do |i| %>
           <div class="bordered">
             <div class="imgholder">
-            <%= image_tag(train.try(:image).try(:avatar).present? ? train.train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
+            <%= image_tag(train.try(:image).try(:avatar).present? ? train.try(:image).try(:avatar) : "workt2.png", width: "100%", class: "lazy")%>
             </div>
             <div class="col-sm-12 mt-10">
               <h4><%= train.title.try(:truncate, 15) %></h4>
