add apply success info

--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -20,6 +20,11 @@
 			text-decoration: underline;
 		}
 	}
+	.bottom-link{
+		position: absolute;
+		bottom: 30px;
+		left: 0;
+	}
 	.frame{
 		margin-bottom: 5px;
 		margin-bottom: 5px;
