--- a/app/views/wechat/applies/index.html.erb
+++ b/app/views/wechat/applies/index.html.erb
@@ -10,7 +10,7 @@
 	</div>
 </div>	
 
-<div class="col-xs-12 turn-back" style="position: absolute; bottom: 30px; left: 0;"><%= link_to("返回上一页", wechat_root_path(openid: session[:openid])) %></div>
+<div class="col-xs-12 turn-back bottom-link"><%= link_to("返回上一页", wechat_root_path(openid: session[:openid])) %></div>
 
 <script>
 	$(function(){
