--- a/app/views/wechat/applies/show.html.erb
+++ b/app/views/wechat/applies/show.html.erb
@@ -14,8 +14,8 @@
 		<div class="col-xs-6 mgin-b-10 rpadding"><div class="frame"><%= Apply::SITUATION[@apply.situation.to_sym] %></div></div>
 		<div class="col-xs-6 mgin-b-10 lpadding"><div class="frame"><%= Apply::DEGREE[@apply.degree.to_sym] %></div></div>
 		<div class="col-xs-12 mgin-b-10"><div class="frame"><%= @apply.school_name %></div></div>
-		<div class="col-xs-6 mgin-b-10 rpadding"><div class="frame"><%= @apply.way %></div></div>
-		<div class="col-xs-6 mgin-b-10 lpadding"><div class="frame"><%= @apply.train_name %></div></div>
+		<div class="col-xs-6 mgin-b-10 rpadding"><div class="frame"><%= Apply::WAY[@apply.way.to_sym] %></div></div>
+		<div class="col-xs-6 mgin-b-10 lpadding"><div class="frame"><%= Apply::TRAIN_NAME[@apply.train_name.to_sym] %></div></div>
 		<div class="col-xs-12 edit">
 			<%= link_to edit_wechat_apply_path(@apply) do %>
 				<button type="button" class="btn btn-lg btn-block my-lg new1">修改</button>
