--- a/app/assets/stylesheets/wechat/applies.scss
+++ b/app/assets/stylesheets/wechat/applies.scss
@@ -13,7 +13,7 @@
 		margin: 0;
 	}
 	.turn-back{
-		margin-top: 10px;
+		margin: 10px 0;
 		text-align: center;
 		a, a:hover{
 			color: #fff !important;
@@ -68,7 +68,7 @@
 	.my-p{
 		color:#fff;
 		margin: 15px 0;
-		font-size: 18px;
+		font-size: 16px;
 		line-height: 24px;
 	}
 	/**wechat/applies/home**/
